--- a/app/src/main/res/layout/activity_movie_review.xml
+++ b/app/src/main/res/layout/activity_movie_review.xml
@@ -14,7 +14,8 @@
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="26sp"/>
 
     <RatingBar
         android:id="@+id/movie_rating_bar"
