--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -14,28 +14,33 @@
             android:id="@+id/item_movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/item_movie_release"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="18sp"/>
     </LinearLayout>
 
     <TextView
         android:id="@+id/item_movie_person_actor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/item_movie_person_director"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="18sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:textSize="18sp">
 
         <RatingBar
             android:id="@+id/item_movie_avg_rating_bar"
